Added navbar and appwrapper with routing

--- a/frontend/src/styles/_Colors.scss
+++ b/frontend/src/styles/_Colors.scss
@@ -1,5 +1,9 @@
-$primary: #022855;
-$secondary: #1fb86e;
+$primary: hsl(213, 95%, 17%);
+// $secondary: hsl(151, 71%, 42%);
+$secondary: hsl(33, 95%, 60%);
 
-$dangerRed: #b81f1f;
-$disabledGrey: #929292;
+$dangerRed: hsl(0, 71%, 42%);
+$disabledGrey: hsl(0, 0%, 57%);
+
+$highlightYellow: hsl(45, 100%, 72%);
+$white: hsl(0, 0%, 90%);
