--- a/frontend/src/styles/_Form.scss
+++ b/frontend/src/styles/_Form.scss
@@ -22,7 +22,7 @@
   }
 
   ::-webkit-input-placeholder {
-    color: #dadada;
+    color: lighten($primary, 10%);
   }
 
   .checkBox {
@@ -41,9 +41,9 @@
   }
 
   button {
-    font-weight: 700;
+    font-weight: 900;
     margin: 30px 0 28px 0;
-    background-color: #fff;
+    background-color: $white;
     color: $primary;
     font-size: 18px;
   }
@@ -51,8 +51,13 @@
   .highlight {
     font-family: lato;
     text-align: center;
-    color: #ffdc71;
+    color: $highlightYellow;
     font-weight: 700;
+    &:hover {
+      text-decoration: underline;
+      text-decoration-color: $highlightYellow;
+      cursor: pointer;
+    }
   }
   .secondaryText {
     color: #e7e7ed;
@@ -66,10 +71,6 @@
     line-height: 1px;
     margin: 38px 0 25px 0;
     font-size: 16px;
-    span {
-      padding: 0 10px;
-      background-color: $primary;
-    }
   }
 
   .socialPlug {
