--- a/frontend/src/styles/_Colors.scss
+++ b/frontend/src/styles/_Colors.scss
@@ -1,9 +1,18 @@
-$primary: hsl(213, 95%, 17%);
+$primary: #022755;
 // $secondary: hsl(151, 71%, 42%);
 $secondary: hsl(33, 95%, 60%);
+// $secondary: #3E3E75;
+$purple: #A270B1;
+// $secondary: #6F5794;
+// $secondary: #500E1E;
+// $secondary: #00839A;
+
+// $secondary: hsl(47, 100%, 50%);
 
 $dangerRed: hsl(0, 71%, 42%);
 $disabledGrey: hsl(0, 0%, 57%);
 
 $highlightYellow: hsl(45, 100%, 72%);
-$white: hsl(0, 0%, 90%);
+// $white: hsl(0, 0%, 90%);
+// $white: hsl(206, 23%, 94%);
+$white: hsl(0, 0%, 100%);
