--- a/frontend/src/styles/_Colors.scss
+++ b/frontend/src/styles/_Colors.scss
@@ -1,6 +1,7 @@
 $primary: #022755;
 // $secondary: hsl(151, 71%, 42%);
-$secondary: hsl(33, 95%, 60%);
+// $secondary: hsl(33, 95%, 60%);
+$secondary: hsl(14, 77%, 54%);
 // $secondary: #3E3E75;
 $purple: #A270B1;
 // $secondary: #6F5794;
