--- a/frontend/src/styles/_Mixins.scss
+++ b/frontend/src/styles/_Mixins.scss
@@ -13,7 +13,7 @@
   } @else if $type == "secondary" {
     background-color: $secondary;
     color: white;
-    color: $primary;
+    // color: $primary;
     &:hover {
       background-color: lighten($secondary, 5);
     }
