Completed from desktop

--- a/frontend/src/styles/_Body.scss
+++ b/frontend/src/styles/_Body.scss
@@ -71,7 +71,7 @@
 	background-color: $white;
 	display: flex;
 	min-height: 100vh;
-	min-width: 100%;
+	width: 100%;
 }
 
 .body {
@@ -79,7 +79,9 @@
 	display: flex;
 	flex-wrap: wrap;
 	gap: 1.5em;
+	// width: clamp(calc(100%-5em), calc(100%-20vw), calc(100%-10em));
 	width: 100%;
+	flex-shrink: 2;
 	align-items: center;
 	justify-content: center;
 	.topMargin {
@@ -112,16 +114,20 @@
 			color: $purple;
 		}
 	}
-	.rating {
+	.review {
 		@extend .bio;
 
 		height: clamp(6em, 20vh, 8em);
-		width: clamp(6em, 20vw, 40em);
+		width: 90%;
 		display: flex;
 		flex-wrap: wrap;
 		.title {
 			@extend .horizontalCenter;
 		}
+	}
+	.rating{
+		@extend .review;
+		height: clamp(3em, 10vh, 5em);
 	}
 }
 
